 [gd_scene load_steps=2 format=3 uid="uid://matchmaking123"]

[ext_resource type="Script" path="res://scripts/matchmaking/MatchmakingController.gd" id="1_matchmaking"]

[node name="MatchmakingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_matchmaking")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainPanel" type="Panel" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(600, 400)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
text = "üèÅ Matchmaking"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
text = "Ready to find a match"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="QueueInfo" type="VBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="LeagueLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/QueueInfo"]
layout_mode = 2
text = "League: Bronze League"
horizontal_alignment = 1

[node name="PlayersLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/QueueInfo"]
layout_mode = 2
text = "Players in queue: 0"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/QueueInfo"]
layout_mode = 2
text = "Estimated wait: 30-60 seconds"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="LoadingContainer" type="VBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="LoadingSpinner" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/LoadingContainer"]
layout_mode = 2
text = "üîÑ Searching for opponents..."
horizontal_alignment = 1
visible = false

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/MainPanel/VBoxContainer/LoadingContainer"]
layout_mode = 2
visible = false

[node name="HSeparator4" type="HSeparator" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="CenterContainer/MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "‚Üê Cancel"
size_flags_horizontal = 3

[node name="FindMatchButton" type="Button" parent="CenterContainer/MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "üîç Find Match"
size_flags_horizontal = 3

[node name="HSeparator5" type="HSeparator" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="MatchFoundPanel" type="Panel" parent="CenterContainer/MainPanel/VBoxContainer"]
layout_mode = 2
visible = false

[node name="MatchFoundContent" type="VBoxContainer" parent="CenterContainer/MainPanel/VBoxContainer/MatchFoundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="MatchFoundTitle" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/MatchFoundPanel/MatchFoundContent"]
layout_mode = 2
text = "üéâ Match Found!"
horizontal_alignment = 1

[node name="OpponentLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/MatchFoundPanel/MatchFoundContent"]
layout_mode = 2
text = "Opponent: Player2"
horizontal_alignment = 1

[node name="TrackLabel" type="Label" parent="CenterContainer/MainPanel/VBoxContainer/MatchFoundPanel/MatchFoundContent"]
layout_mode = 2
text = "Track: Spa-Francorchamps"
horizontal_alignment = 1

[node name="StartRaceButton" type="Button" parent="CenterContainer/MainPanel/VBoxContainer/MatchFoundPanel/MatchFoundContent"]
layout_mode = 2
text = "üèéÔ∏è Start Race!"
